# coupon_challenge

./: .gitignore  CHALLENGE.md  Dockerfile  NOTE.md  README.md  app.py  compose.yml  pyproject.toml
docker/mongo/docker-entrypoint-initdb.d/: init.js
src/araiko_challenge/: cli.py  dependencies.py  legacy.py  main.py  settings.py
src/araiko_challenge/models/: coupon.py  product.py
src/araiko_challenge/routers/: coupons.py
src/araiko_challenge/services/: coupons.py
src/araiko_challenge/services/storage/: __init__.py  mongodb.py  sqlite.py
src/coupon_challenge/: cli.py  dependencies.py  exceptions.py  legacy.py  main.py  settings.py
src/coupon_challenge/models/: coupon.py  product.py
src/coupon_challenge/routers/: coupons.py
src/coupon_challenge/services/: coupons.py
src/coupon_challenge/services/storage/: __init__.py  mongodb.py  sqlite.py
tests/araiko_challenge/: conftest.py  test_legacy.py
tests/araiko_challenge/models/: test_coupon.py  test_product.py
tests/araiko_challenge/routers/: test_coupons.py
tests/araiko_challenge/services/: test_coupons.py
tests/araiko_challenge/services/storage/: test_mongodb.py  test_sqlite.py
