[project]
name = "araiko_challenge"
version = "0.1.0"
description = "Araïko challenge for thomas lechauve"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = ["pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
soldes = "araiko_challenge.main:cli"